force-app/main/default/objects/Account_Competitor__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>Flavour</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>