force-app/main/default/objects/Account_Competitor__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>FLAVOUR</fullName>
            </value>
            <value>
                <fullName>COLOR</fullName>
            </value>
            <value>
                <fullName>PLANT BASED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>