force-app/main/default/objects/Account_Competitor__c/fields/Symega_Share__c.field-meta.xml
<CustomField>
    <fullName>Symega_Share__c</fullName>
    <label>Symega Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>